--- a/upahar/store/templates/navbar.html
+++ b/upahar/store/templates/navbar.html
@@ -9,20 +9,26 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="home.html">Home</a>
+            <a class="nav-link" aria-current="page" href="{%url 'home'%}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="categories.html">Categories</a>
+            <a class="nav-link" href="{%url 'categories'%}">Categories</a>
           </li>
           
           <li class="nav-item">
             <a class="nav-link" href="#">Cart </a>
           </li>
+          {% if user.is_authenticated%}
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="{%url 'logout'%}">Logout</a>
           </li>
+          {%else%}
           <li class="nav-item">
-            <a class="nav-link" href="#">Sign up</a>
+            <a class="nav-link" href="{%url 'login'%}">Login</a>
+          </li>
+          {%endif%}
+          <li class="nav-item">
+            <a class="nav-link" href="{%url 'register'%}">Sign up</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" style="background-color: rgb(0, 0, 0);border-radius: 10px; color: aliceblue;">Find a gift </a>
