--- a/upahar/store/templates/navbar.html
+++ b/upahar/store/templates/navbar.html
@@ -34,8 +34,8 @@
             <a class="nav-link" href="#" style="background-color: rgb(0, 0, 0);border-radius: 10px; color: aliceblue;">Find a gift </a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Type to search ..." aria-label="Search">
+        <form class="d-flex" role="search" method="get" action="{%url 'searchproduct'%}">
+          <input class="form-control me-2" type="search" name="query" placeholder="Type to search ..." aria-label="Search">
           <button class="btn btn-outline-success" type="submit" style="background-color: black; color: aliceblue;">Search</button>
         </form>
       </div>
