--- a/upahar/store/templates/categorypr.html
+++ b/upahar/store/templates/categorypr.html
@@ -14,11 +14,32 @@
         <h3>Rs {{product.price}}</h3>
         <div class="buttons">
           <a href="{% url 'product' product.id %}" style="background-color: #F28C1F; color: aliceblue;text-decoration: none;padding: 10px;width:50%;text-align: center;">See More</a>
-          <a href="" style="background-color: rgb(22, 22, 22); color: aliceblue;text-decoration: none;padding: 10px;width:50%;text-align: center;">Add to Cart</a>
+          <a href="" style="background-color: rgb(22, 22, 22); color: aliceblue;text-decoration: none;padding: 10px;width:50%;text-align: center;"id="add-cart" value="{{ product.id }}">Add to Cart</a>
           
         </div>
       </div>
 
       {%endfor%}
-      
+      <script>
+        $(document).on('click','#add-cart',function(e){
+          e.preventDefault();
+          $.ajax({
+            type:'POST',
+            url: `{% url 'cart_add' %}` ,
+            data:{
+              product_id:$('#add-cart').val(),
+              csrfmiddlewaretoken: '{{ csrf_token }}',
+              action: 'post'
+            },
+    
+            success:function(json){
+              console.log(json)
+            },
+            error:function(xhr,errmsg,err){
+    
+            }
+    
+          });
+        })
+      </script>
 {% endblock %}
