--- a/upahar/store/templates/product.html
+++ b/upahar/store/templates/product.html
@@ -13,9 +13,31 @@
           <h5 class="card-title">{{product.name}}</h5>
           <h3>{{product.price}}</h3>
           <p class="card-text">{{product.description}}</p>
-          <a href="" style="background-color: rgb(22, 22, 22); color: aliceblue;text-decoration: none;padding: 10px;width:50%;text-align: center;">Add to Cart</a>
+          <a href="" style="background-color: rgb(22, 22, 22); color: aliceblue;text-decoration: none;padding: 10px;width:50%;text-align: center;"id="add-cart" value="{{product.id}}">Add to Cart</a>
         </div>
       </div>
     </div>
   </div>
+  <script>
+    $(document).on('click','#add-cart',function(e){
+      e.preventDefault();
+      $.ajax({
+        type:'POST',
+        url: `{% url 'cart_add' %}` ,
+        data:{
+          product_id:$('#add-cart').val(),
+          csrfmiddlewaretoke:'{{csfr_token}}',
+          action:'post'
+        },
+
+        success:function(json){
+          console.log(json)
+        },
+        error:function(xhr,errmsg,err){
+
+        }
+
+      });
+    })
+  </script>
 {% endblock %}
