--- a/upahar/static/css/styles.css
+++ b/upahar/static/css/styles.css
@@ -223,6 +223,31 @@ button{
 .indcat img{
     width: 100px;
 }
+#twittermaincontainer{
+    height: 100vh;
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url('https://basecreative.co.uk/wp-content/uploads/2021/05/sharing-social-header-s1.jpg');
+    background-size: cover; /* Adjust the background size as needed */
+    background-position: center; 
+}
+#twittermaincontainer input{
+    height: 50px;
+    width: 450px;
+    padding-left: 20px;
+}
+.findtwitter{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+}
+
 
 @media(max-width:500px) {
     .DestDetails{
