--- a/upahar/store/templates/gifts.html
+++ b/upahar/store/templates/gifts.html
@@ -3,6 +3,7 @@
 
   {%include 'navbar.html'%}
   {% block content %}
+  <h2>'{{tuser}}' might like</h2>
       <div class="productlists">
       {% for category_name, products in categories_and_products.items %}
     {% for product in products%}
@@ -11,9 +12,7 @@
       <h4>{{product.name}}</h4>
       <h3>Rs {{product.price}}</h3>
       <div class="buttons">
-        <a href="{% url 'product' product.id %}" style="background-color: #F28C1F; color: aliceblue;text-decoration: none;padding: 10px;width:50%;text-align: center;">See More</a>
-        <a href="" style="background-color: rgb(22, 22, 22); color: aliceblue;text-decoration: none;padding: 10px;width:50%;text-align: center;">Add to Cart</a>
-        
+        <a href="{% url 'product' product.id %}" style="background-color: #F28C1F; color: aliceblue;text-decoration: none;padding: 10px;width:100%;text-align: center;">See More</a>
       </div>
     </div>
 
