--- a/upahar/store/templates/product.html
+++ b/upahar/store/templates/product.html
@@ -13,7 +13,10 @@
           <h5 class="card-title">{{product.name}}</h5>
           <h3>{{product.price}}</h3>
           <p class="card-text">{{product.description}}</p>
-          <a href="" style="background-color: rgb(22, 22, 22); color: aliceblue;text-decoration: none;padding: 10px;width:50%;text-align: center;"id="add-cart" value="{{product.id}}">Add to Cart</a>
+          <h3>Quantity: </h3>
+          <input type="number" min="1" max="20" id="quantity"><br><br>
+
+          <a href="" style="background-color: rgb(22, 22, 22); color: aliceblue;text-decoration: none;padding: 10px;width:50%;text-align: center;"id="add-cart" data-product-id="{{product.id}}">Add to Cart</a>
         </div>
       </div>
     </div>
@@ -25,8 +28,9 @@
         type:'POST',
         url: `{% url 'cart_add' %}` ,
         data:{
-          product_id:$('#add-cart').val(),
-          csrfmiddlewaretoke:'{{csfr_token}}',
+          product_id:$(this).data('product-id'),
+          product_quantity:$('#quantity').val(),
+          csrfmiddlewaretoken: '{{ csrf_token }}',
           action:'post'
         },
 
