--- a/upahar/store/templates/navbar.html
+++ b/upahar/store/templates/navbar.html
@@ -26,6 +26,9 @@
           <li class="nav-item">
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'my_orders' %}">My orders</a>
+        </li>
          {% else %}
           <li class="nav-item">
               <a class="nav-link" href="{% url 'login' %}">Login</a>
