--- a/upahar/store/templates/navbar.html
+++ b/upahar/store/templates/navbar.html
@@ -27,7 +27,7 @@
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'my_orders' %}">My orders</a>
+            <a class="nav-link" href="{% url 'myorders' %}">My orders</a>
         </li>
          {% else %}
           <li class="nav-item">
