--- a/upahar/store/templates/searchproduct.html
+++ b/upahar/store/templates/searchproduct.html
@@ -14,9 +14,12 @@
         <div class="imags"><img src="{{product.image.url}}" alt=""></div>
         <h4>{{product.name}}</h4>
         <h3>Rs {{product.price}}</h3>
+        {%if product.stocks < 1 %}
+        <h3 style="color: red;">Product Out Of Stock</h3>
+        {% endif %}
         <div class="buttons">
-          <a href="{% url 'product' product.id %}" style="background-color: #F28C1F; color: aliceblue;text-decoration: none;padding: 10px;width:50%;text-align: center;">See More</a>
-          <a href="" style="background-color: rgb(22, 22, 22); color: aliceblue;text-decoration: none;padding: 10px;width:50%;text-align: center;">Add to Cart</a>
+          <a href="{% url 'product' product.id %}" style="background-color: #F28C1F; color: aliceblue;text-decoration: none;padding: 10px;width:100%;text-align: center;">See More</a>
+          
           
         </div>
       </div>
