error displays and minor changes in model to remove decimal value of price

--- a/upahar/store/templates/base.html
+++ b/upahar/store/templates/base.html
@@ -23,9 +23,13 @@
       </div>
       {%endfor%}
   {%endif%}
+  <div class="contentcontainer" style="padding: 20px 20px 20px 20px; margin-top: 10px;">
+
+  
   {% block content %}
 
   
   {% endblock %}
+</div>
 </body>
 </html>
