--- a/upahar/store/templates/findgift.html
+++ b/upahar/store/templates/findgift.html
@@ -8,7 +8,9 @@
       <input type="text" placeholder="Enter Username" name="tusername">
       <button type="submit" style="border: 2px solid rgb(245, 144, 28); background-color: aliceblue;color: rgb(245, 144, 28);"> Find gift</button>
     </form>
+    <p style="color: rgb(29, 29, 29);">Enter only the username excluding @ .( For e.g. Make sure to enter 'charco_holic' instead of '@charco_holic')</p>
   </div>
+  
  
 
 
