--- a/upahar/cart/templates/cart.html
+++ b/upahar/cart/templates/cart.html
@@ -4,7 +4,7 @@
   {%include 'navbar.html'%}
   {% block content %}
 
-  <h1 >Cart Items </h1>
+  <h1 >Cart Items </h1><br>
   <div class="productlists">
     {%if cart_products %}
    {% for product in cart_products%}
@@ -28,7 +28,8 @@
   </div>
   <div id="cart-report" style="padding: 20px;">
     <hr>
-    <p >Total:Rs {{ totalpaisa}}</p>
+    <p style="color: rgb(19, 19, 19);font-size: 24px;font-weight: 500;">Total: Rs {{ totals}}</p>
+    <hr>
     {% if user.is_authenticated %}
     <form method="post" action="{% url 'initiate' %}">
       {% csrf_token %}
@@ -40,7 +41,7 @@
       <input type="hidden" name="return_url" value="http://127.0.0.1:8000/cart/checkout/verify/">
       <input type="hidden" name="fname" value="{{ user.first_name }}">
       <input type="hidden" name="email" value="{{ user.email }}">
-    <input type="text" name="address" placeholder="Enter pickup address">
+    <input type="text" name="address" placeholder="Enter pickup address"><br><br>
     <input type="text" name="phone" placeholder="Enter phone number"> <br>
     <br><button type="submit" style="background-color: #5E338D;">Checkout via Khalti</button>
     </form>
