--- a/upahar/static/css/styles.css
+++ b/upahar/static/css/styles.css
@@ -228,6 +228,8 @@ button{
     width: 100%;
     padding: 20px;
     display: flex;
+    flex-direction: column;
+    gap: 10px;
     align-items: center;
     justify-content: center;
     background-image: url('https://basecreative.co.uk/wp-content/uploads/2021/05/sharing-social-header-s1.jpg');
