--- a/upahar/store/templates/categorypr.html
+++ b/upahar/store/templates/categorypr.html
@@ -5,7 +5,7 @@
   {% block content %}
 
 
-    <h1 >{{category.name}}</h1>
+    <h1 >{{category.name}}</h1><br>
      <div class="productlists">
       {% for product in products%}
       <div class="indproduct">
