changed product and added recommended product functionality

--- a/upahar/store/templates/categorypr.html
+++ b/upahar/store/templates/categorypr.html
@@ -11,7 +11,7 @@
       <div class="indproduct">
         <div class="imags"><img src="{{product.image.url}}" alt=""></div>
         <h4>{{product.name}}</h4>
-        <h3>Rs {{product.price}}</h3>
+        <h3>रु {{product.price}}</h3>
         {%if product.stocks < 1 %}
         <span style="color: red;">Product Out Of Stock</span>
         {% endif %}
