--- a/upahar/store/templates/product.html
+++ b/upahar/store/templates/product.html
@@ -11,7 +11,7 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">{{product.name}}</h5>
-          <h3>{{product.price}}</h3>
+          <h3>रु {{product.price}}</h3>
           <p class="card-text">{{product.description}}</p><br>
           {%if product.stocks < 1 %}
         <h3 style="color: red;">Product Out Of Stock</h3>
@@ -25,6 +25,27 @@
       </div>
     </div>
   </div>
+
+  <h1 >Recommended</h1><br> 
+  
+     <div class="productlists">
+      {% for relatedprs in relatedpr%}
+      <div class="indproduct">
+        <div class="imags"><img src="{{relatedprs.image.url}}" alt=""></div>
+        <h4>{{relatedprs.name}}</h4>
+        <h3>रु {{relatedprs.price}}</h3>
+        {%if relatedprs.stocks < 1 %}
+        <span style="color: red;">Product Out Of Stock</span>
+        {% endif %}
+        <div class="buttons">
+          <a href="{% url 'product' relatedprs.id %}" style="background-color: #F28C1F; color: aliceblue;text-decoration: none;padding: 10px;width:100%;text-align: center;">See More</a>  
+        </div>
+      </div>
+
+       {%endfor%} 
+
+   
+
   <script>
     $(document).on('click','#add-cart',function(e){
       e.preventDefault();
