--- a/upahar/store/templates/gifts.html
+++ b/upahar/store/templates/gifts.html
@@ -3,20 +3,61 @@
 
   {%include 'navbar.html'%}
   {% block content %}
-  <h2>'{{tuser}}' might like</h2>
-      <div class="productlists">
-      {% for category_name, products in categories_and_products.items %}
-    {% for product in products%}
-    <div class="indproduct">
-      <div class="imags"><img src="{{product.image.url}}" alt=""></div>
-      <h4>{{product.name}}</h4>
-      <h3>Rs {{product.price}}</h3>
-      <div class="buttons">
-        <a href="{% url 'product' product.id %}" style="background-color: #F28C1F; color: aliceblue;text-decoration: none;padding: 10px;width:100%;text-align: center;">See More</a>
+  <h2>'{{tuser}}' recent tweets </h2>
+
+  <div class="accordion" id="accordionExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingOne">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          First Tweet
+        </button>
+      </h2>
+      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <h2>Related Products</h2><br>
+          <div class="productlists">
+            {% for category_name, products in categories_and_products.items %}
+          {% for product in products%}
+          <div class="indproduct">
+            <div class="imags"><img src="{{product.image.url}}" alt=""></div>
+            <h4>{{product.name}}</h4>
+            <h3>Rs {{product.price}}</h3>
+            <div class="buttons">
+              <a href="{% url 'product' product.id %}" style="background-color: #F28C1F; color: aliceblue;text-decoration: none;padding: 10px;width:100%;text-align: center;">See More</a>
+            </div>
+          </div>
+      
+          {%endfor%}
+      {% endfor %}
+      </div>
+        </div>
       </div>
     </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingTwo">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Second Tweet
+        </button>
+      </h2>
+      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingThree">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Accordion Item #3
+        </button>
+      </h2>
+      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        </div>
+      </div>
+    </div>
+  </div>
 
-    {%endfor%}
-{% endfor %}
-</div>
+      
 {% endblock %}
